--- a/build.gradle
+++ b/build.gradle
@@ -28,5 +28,9 @@ dependencies {
     
     // Use Apache HttpClient
     compile 'org.apache.httpcomponents:httpclient:4.5.6'
+    
+    // https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
+	compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
+    
 }
 
