--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     
     // Use Apache HttpClient
-    compile 'org.apache.httpcomponents:httpclient:4.5.6'
+    api 'org.apache.httpcomponents:httpclient:4.5.6'
     
     // https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
 	compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
