Add more test cases for Content classes and Redirect Handler to increase code coverage to more than 90%

--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@
 
 // Apply the java-library plugin to add support for Java Library
 apply plugin: 'java-library'
+apply plugin: 'jacoco'
 
 // In this section you declare where to find the dependencies of your project
 repositories {
