--- a/.azure-pipelines/prValidate.yml
+++ b/.azure-pipelines/prValidate.yml
@@ -7,9 +7,9 @@
 pr: 
   branches:
     include:
-      -master
-      -main
-      -dev
+      - master
+      - main
+      - dev
   paths:
     exclude:
       - .azure-pipelines
@@ -44,11 +44,10 @@ steps:
     debugMode: false
 
 - task: PowerShell@2
-  condition: $(Build.SourceBranchName) != dev
+  condition: and(failed(), eq($(Build.SourceBranchName), 'dev')
   inputs:
     filePath: '$(System.DefaultWorkingDirectory)/Scripts/validateMavenVersion.ps1'
     pwsh: true
-
 
 - task: Gradle@2
   inputs:
