--- a/.azure-pipelines/prValidate.yml
+++ b/.azure-pipelines/prValidate.yml
@@ -44,7 +44,7 @@ steps:
     debugMode: false
 
 - task: PowerShell@2
-  condition: and(failed(), eq($(Build.SourceBranchName), 'dev')
+  condition: and(failed(), eq($(Build.SourceBranchName), 'dev'))
   inputs:
     filePath: '$(System.DefaultWorkingDirectory)/Scripts/validateMavenVersion.ps1'
     pwsh: true
