Update prValidate.yml for Azure Pipelines

--- a/.azure-pipelines/prValidate.yml
+++ b/.azure-pipelines/prValidate.yml
@@ -28,7 +28,7 @@ trigger: none # disable triggers based on commits.
 
 variables:
   PACKAGE_NAME: 'microsoft-graph-core'
-  PROJECT_PATH: '.\src\Microsoft.Graph.Core\Microsoft.Graph.Core.csproj'
+  GRADLE_PATH: '.\gradle.properties'
 
 pool: 
   vmImage: windows-latest
