--- a/.azure-pipelines/buildAndPackage.yml
+++ b/.azure-pipelines/buildAndPackage.yml
@@ -1,3 +1,8 @@
+#Copyright (c) Microsoft Corporation. All rights reserved.
+#Licensed under the MIT License.
+#Building and packaging the artifacts of the Java-Core libraries using the build.gradle file.
+#Ready the package for deployment and release. 
+
 trigger:
   branches:
     include:
