--- a/.azure-pipelines/prValidate.yml
+++ b/.azure-pipelines/prValidate.yml
@@ -41,7 +41,7 @@ steps:
 - task: PowerShell@2
   condition: and(failed(), eq(variables['Build.SourceBranchName'], 'dev'))
   inputs:
-    filePath: '$(System.DefaultWorkingDirectory)\Scripts\validateMavenVersion.ps1'
+    filePath: '$(System.DefaultWorkingDirectory)\scripts\validateMavenVersion.ps1'
     pwsh: true
     arguments: '-packageName "$(PACKAGE_NAME)" -propertiesPath "$(PROPERTIES_PATH)"'
 
