Update prValidate.yml for Azure Pipelines
add "Scripts/*" in pr: - paths: - exclude: 
within prValidate.yml

--- a/.azure-pipelines/prValidate.yml
+++ b/.azure-pipelines/prValidate.yml
@@ -18,6 +18,7 @@ pr:
       - gradlew.bat
       - readme.md
       - settings.gradle
+      - Scripts/*
 
 trigger: none # disable triggers based on commits.
 
