--- a/.azure-pipelines/prValidate.yml
+++ b/.azure-pipelines/prValidate.yml
@@ -1,4 +1,8 @@
-# Build and test Java Core to make sure a valid pull request is being made 
+  
+#Copyright (c) Microsoft Corporation. All rights reserved.
+#Licensed under the MIT License.
+#Build and test Java Core to make sure a valid pull request is being made
+#Validate that the versions dont conflict with those online in case a pull request is made to main or master
 pr: 
   branches:
     include:
