--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,9 @@ dependencies {
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
-    
+    //Mockito Mock framework
+    testImplementation 'org.mockito:mockito-core:3.4.4'
+
     api 'com.squareup.okhttp3:okhttp:3.12.1'
     
     // https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
