- replaces hardcoded constants by settings loading

--- a/build.gradle
+++ b/build.gradle
@@ -68,8 +68,8 @@ publishing {
     publications {
 
         maven(MavenPublication) {
-            groupId 'com.microsoft.graph'
-            artifactId 'microsoft-graph-core'
+            groupId project.property('mavenGroupId')
+            artifactId project.property('mavenArtifactId')
             version "${mavenMajorVersion}.${mavenMinorVersion}.${mavenPatchVersion}${mavenArtifactSuffix}"
             from components.java
             artifact sourceJar
@@ -86,8 +86,8 @@ publishing {
         }
         Snapshot(MavenPublication) {
         	customizePom(pom)
-        	groupId 'com.microsoft.graph'
-        	artifactId 'microsoft-graph-core'
+        	groupId project.property('mavenGroupId')
+        	artifactId project.property('mavenArtifactId')
         	version "${mavenMajorVersion}.${mavenMinorVersion}.${mavenPatchVersion}${mavenCentralSnapshotArtifactSuffix}"
         	from components.java
         	pom.withXml {
@@ -100,8 +100,8 @@ publishing {
 		
 		mavenCentralRelease(MavenPublication) {
         	customizePom(pom)
-        	groupId 'com.microsoft.graph'
-        	artifactId 'microsoft-graph-core'
+        	groupId project.property('mavenGroupId')
+        	artifactId project.property('mavenArtifactId')
         	version "${mavenMajorVersion}.${mavenMinorVersion}.${mavenPatchVersion}"
         	from components.java
         	pom.withXml {
