--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,7 @@ dependencies {
     
     api 'com.squareup.okhttp3:okhttp:3.12.1'
     
-    // https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
-	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
 
 def pomConfig = {
