- fixes jigsaw module name to make it unique

--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ def pomConfig = {
 
 tasks.jar {
     manifest {
-        attributes('Automatic-Module-Name': project.property('mavenGroupId'))
+        attributes('Automatic-Module-Name': project.property('mavenGroupId') + '.core')
     }
 }
 
