- moves dependencies in dedicated file

--- a/build.gradle
+++ b/build.gradle
@@ -28,14 +28,7 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
-    // Use JUnit test framework
-    testImplementation 'junit:junit:4.13'
-    
-    api 'com.squareup.okhttp3:okhttp:4.9.0'
-    
-    implementation 'com.google.code.gson:gson:2.8.6'
-}
+apply from: "gradle/dependencies.gradle"
 
 def pomConfig = {
     licenses {
