--- a/.github/workflows/api-level-lint.yml
+++ b/.github/workflows/api-level-lint.yml
@@ -25,5 +25,13 @@ jobs:
         run: chmod +x gradlew
         working-directory: ./android
       - name: Build SDK with Android project configuration
+        id: lint
         run: ./gradlew --no-daemon build
         working-directory: ./android
+      - name: Upload linting results
+        if: failure() && steps.lint.outcome == 'failure'
+        uses: actions/upload-artifact@v2
+        with:
+          name: lint-report
+          path: ./android/build/reports
+      
