--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1,6 +1,7 @@
 dependencies {
     // Use JUnit test framework
     testImplementation 'junit:junit:4.13.1'
+    testImplementation 'org.mockito:mockito-core:3.6.0'
     
     api 'com.squareup.okhttp3:okhttp:4.9.0'
 
