--- a/android/build.gradle
+++ b/android/build.gradle
@@ -55,6 +55,7 @@ android {
         disable "ResourceType"                 // Annotation binding
         disable "GradleDependency"
         disable "NewerVersionAvailable"
+        disable "DuplicatePlatformClasses"      // xpp3 added by azure-identity 
     }
 	sourceSets {
 		main {
