--- a/.azure-pipelines/buildAndPackage.yml
+++ b/.azure-pipelines/buildAndPackage.yml
@@ -85,6 +85,7 @@ steps:
       settings.gradle
       gradle.properties
       **/gradle/wrapper/*
+      Scripts/**
     TargetFolder: '$(Build.ArtifactStagingDirectory)/'
 
 - task: PublishBuildArtifacts@1
