- fixes collection to include missing dependencies file

--- a/.azure-pipelines/buildAndPackage.yml
+++ b/.azure-pipelines/buildAndPackage.yml
@@ -84,7 +84,7 @@ steps:
       gradlew.bat
       settings.gradle
       gradle.properties
-      **/gradle/wrapper/*
+      **/gradle/*
       Scripts/getLatestVersion.ps1
     TargetFolder: '$(Build.ArtifactStagingDirectory)/'
 
