- attempt at fixing minimatch pattern

--- a/.azure-pipelines/buildAndPackage.yml
+++ b/.azure-pipelines/buildAndPackage.yml
@@ -85,7 +85,7 @@ steps:
       gradlew.bat
       settings.gradle
       gradle.properties
-      **/gradle/*
+      **/gradle/**
       Scripts/getLatestVersion.ps1
     TargetFolder: '$(Build.ArtifactStagingDirectory)/'
 
