- adds missing guava reference

--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -4,7 +4,7 @@ dependencies {
     
     api 'com.squareup.okhttp3:okhttp:4.9.0'
 
-    api 'com.google.code.findbugs:jsr305:3.0.2' // can be replaced by guava if we need guava
-    
+    implementation 'com.google.guava:guava:29.0-jre'
+
     implementation 'com.google.code.gson:gson:2.8.6'
 }
