--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -8,5 +8,5 @@ dependencies {
     implementation 'com.google.guava:guava:29.0-jre'
 
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.azure:azure-identity:1.2.0'
+    api 'com.azure:azure-identity:1.2.0'
 }
