--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
    
 	<groupId>com.microsoft.graph</groupId>
 	<artifactId>microsoft-graph-core</artifactId>
-	<version>1.0.6</version>
+	<version>2.0.0</version>
 	<packaging>pom</packaging>
 
 	<dependencies>
@@ -18,9 +18,19 @@
 			<version>2.8.6</version>
 		</dependency>
 		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>29.0-jre</version>
+		</dependency>
+		<dependency>
 			<groupId>com.squareup.okhttp3</groupId>
 			<artifactId>gson</artifactId>
-			<version>3.12.1</version>
+			<version>4.9.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.azure</groupId>
+			<artifactId>azure-identity</artifactId>
+			<version>1.2.0</version>
 		</dependency>
 	</dependencies>
 </project>
