- upgrades to junit5

--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ java {
 }
 
 test {
+    useJUnitPlatform()
     finalizedBy jacocoTestReport // report is always generated after tests run
 }
 jacocoTestReport {
