--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1,7 +1,8 @@
 dependencies {
     // Use JUnit test framework
-    testImplementation 'junit:junit:4.13.1'
-    testImplementation 'org.mockito:mockito-inline:3.6.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    testImplementation 'org.mockito:mockito-inline:3.7.7'
     
     api 'com.squareup.okhttp3:okhttp:4.9.0'
 
