--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ plugins {
     id 'maven-publish'
     id 'signing'
     id 'jacoco'
+    id 'com.github.spotbugs' version '4.6.0'
 }
 
 java {
@@ -30,6 +31,16 @@ jacocoTestReport {
 
 jacoco {
     toolVersion = "0.8.7-SNAPSHOT" //https://github.com/gradle/gradle/issues/15038
+}
+
+spotbugsMain {
+    reports {
+        html {
+            enabled = true
+            destination = file("$buildDir/reports/spotbugs/main/spotbugs.html")
+            stylesheet = 'fancy-hist.xsl'
+        }
+    }
 }
 
 jacocoTestReport {
