--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ plugins {
     id 'signing'
     id 'jacoco'
     id 'com.github.spotbugs' version '4.6.0'
+    id 'checkstyle'
 }
 
 java {
@@ -85,6 +86,16 @@ def pomConfig = {
             url "http://opensource.org/licenses/MIT"
             distribution "repo"
         }
+    }
+}
+
+checkstyle {
+    toolVersion "8.40"
+}
+tasks.withType(Checkstyle) {
+    reports {
+        xml.enabled false
+        html.enabled true
     }
 }
 
