--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,16 @@ spotbugsMain {
     }
 }
 
+spotbugsTest {
+    reports {
+        html {
+            enabled = true
+            destination = file("$buildDir/reports/spotbugs/test/spotbugs.html")
+            stylesheet = 'fancy-hist.xsl'
+        }
+    }
+}
+
 jacocoTestReport {
     reports {
         xml.enabled true
