--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ jacoco {
 }
 
 spotbugsMain {
+    excludeFilter = file("spotBugsExcludeFilter.xml")
     reports {
         html {
             enabled = true
@@ -44,6 +45,7 @@ spotbugsMain {
 }
 
 spotbugsTest {
+    excludeFilter = file("spotBugsExcludeFilter.xml")
     reports {
         html {
             enabled = true
