--- a/.azure-pipelines/templates/install-java.yml
+++ b/.azure-pipelines/templates/install-java.yml
@@ -1,10 +1,10 @@
 steps:
-- pwsh: 'Invoke-WebRequest -Uri https://github.com/AdoptOpenJDK/openjdk15-binaries/releases/download/jdk-15.0.2%2B7/OpenJDK15U-jdk_x64_windows_hotspot_15.0.2_7.zip -OutFile OpenJDK.zip'
+- pwsh: 'Invoke-WebRequest -Uri https://github.com/AdoptOpenJDK/openjdk16-binaries/releases/download/jdk-16%2B36/OpenJDK16-jdk_x64_windows_hotspot_16_36.zip -OutFile OpenJDK.zip'
   displayName: 'Download JDK'
 
 - task: JavaToolInstaller@0
   inputs:
-    versionSpec: '15'
+    versionSpec: '16'
     jdkArchitectureOption: 'x64'
     jdkSourceOption: 'LocalDirectory'
     jdkFile: 'OpenJDK.zip'
