--- a/samples/deviceCodeSample/build.gradle
+++ b/samples/deviceCodeSample/build.gradle
@@ -10,7 +10,7 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
     implementation project(':coreLibrary')
-    implementation 'com.azure:azure-identity:1.2.0'
+    implementation 'com.azure:azure-identity:1.2.5'
 }
