--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,8 @@
         </dependency>
         <dependency>
             <groupId>com.azure</groupId>
-            <artifactId>azure-identity</artifactId>
-            <version>1.2.5</version>
+            <artifactId>azure-core</artifactId>
+            <version>1.15.0</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
