--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ jacocoTestReport {
 }
 
 jacoco {
-    toolVersion = "0.8.7-SNAPSHOT" //https://github.com/gradle/gradle/issues/15038
+    toolVersion = "0.8.7"
 }
 
 spotbugsMain {
