--- a/.github/workflows/api-level-lint.yml
+++ b/.github/workflows/api-level-lint.yml
@@ -1,6 +1,7 @@
 name: "Checks the SDK only using APIs from the targeted API level"
 
-on: 
+on:
+  workflow_dispatch:
   push:
     branches:
       - dev
