--- a/.azure-pipelines/templates/build-stage/publish-artefacts.yml
+++ b/.azure-pipelines/templates/build-stage/publish-artefacts.yml
@@ -15,7 +15,8 @@ steps:
       Scripts/**
     TargetFolder: '$(Build.ArtifactStagingDirectory)/'
 
-- task: PublishBuildArtifacts@1
-  displayName: 'Publish Artifact: drop'
+- task: PublishPipelineArtifact@1
   inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    targetPath: '$(Build.ArtifactStagingDirectory)'
+    artifact: 'Drop'
+    publishLocation: 'pipeline'
