added validation request for release stage

--- a/.azure-pipelines/buildAndPackage.yml
+++ b/.azure-pipelines/buildAndPackage.yml
@@ -58,6 +58,7 @@ stages:
   jobs:
   - job: Maven-Release
     steps: 
+    - template: templates/validation-request.yml
     - template: templates/download-artifacts.yml
     - template: templates/maven-release-stage/secure-files.yml
     - template: templates/maven-release-stage/copy-and-build.yml
