--- a/.azure-pipelines/buildAndPackage.yml
+++ b/.azure-pipelines/buildAndPackage.yml
@@ -56,13 +56,19 @@ stages:
   dependsOn: []
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
   jobs:
-  - job: Maven-Release
-    steps: 
-    - template: templates/validation-request.yml
-    - template: templates/download-artifacts.yml
-    - template: templates/maven-release-stage/secure-files.yml
-    - template: templates/maven-release-stage/copy-and-build.yml
-    - template: templates/alert-failure.yml
+  - deployment: Maven-Release
+    environment: 'MSGraph SDK Development - Java'
+    pool:
+      vmImage: windows-latest
+    strategy:
+     runOnce:
+      deploy:
+        steps:
+        - template: templates/validation-request.yml
+        - template: templates/download-artifacts.yml
+        - template: templates/maven-release-stage/secure-files.yml
+        - template: templates/maven-release-stage/copy-and-build.yml
+        - template: templates/alert-failure.yml
 
 - stage: Github-Release
   dependsOn: 
