--- a/.azure-pipelines/buildAndPackage.yml
+++ b/.azure-pipelines/buildAndPackage.yml
@@ -52,7 +52,7 @@ stages:
     - template: templates/maven-preview-stage/copy-and-build.yml
     - template: templates/alert-failure.yml
 
-- stage: Maven-Release
+- stage: Maven-Release-And-Git-Release
   dependsOn: []
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
   jobs:
@@ -68,12 +68,24 @@ stages:
         - template: templates/maven-release-stage/copy-and-build.yml
         - template: templates/alert-failure.yml
 
-- stage: Github-Release
-  dependsOn: 
-  - Maven-Release
-  jobs:
-  - job: Github-Release
-    steps:
-    - template: templates/download-artifacts.yml
-    - template: templates/github-release-stage/version-and-release.yml
-    - template: templates/alert-failure.yml
+  - deployment: Github-Release
+    dependsOn: Maven-Release
+    environment: 'MSGraph SDK Development - Java'
+    pool:
+      vmImage: windows-latest
+    strategy: 
+     runOnce:
+      deploy:
+      steps: 
+        - template: templates/github-release-stage/version-and-release.yml
+        - template: templates/alert-failure.yml
+
+#- stage: Github-Release
+#  dependsOn: 
+#  - Maven-Release
+#  jobs:
+#  - job: Github-Release
+#    steps:
+#    - template: templates/download-artifacts.yml
+#    - template: templates/github-release-stage/version-and-release.yml
+#    - template: templates/alert-failure.yml
