--- a/.azure-pipelines/buildAndPackage.yml
+++ b/.azure-pipelines/buildAndPackage.yml
@@ -37,7 +37,9 @@ stages:
     steps:
     - template: templates/build/checkout-and-credscan.yml
     - template: templates/build/install-java.yml
-    - template: templates/build/secure-files.yml
+    - template: templates/secure-files.yml
+      parameters:
+        stageID: 'build'
     - template: templates/build/build-and-coverage.yml
     - template: templates/build/publish-artefacts.yml
     - template: templates/alert-failure.yml
@@ -48,7 +50,7 @@ stages:
   - job: Maven-Preview
     steps: 
     - template: templates/download-artifacts.yml
-    - template: templates/meven-preview/secure-files.yml
+    - template: templates/secure-files.yml
     - template: templates/meven-preview/copy-and-build.yml
     - template: templates/alert-failure.yml
 
@@ -64,7 +66,9 @@ stages:
      runOnce:
       deploy:
         steps:
-        - template: templates/meven-release/secure-files.yml
+        - template: templates/secure-files.yml
+          parameters:
+            stageID: 'release'
         - template: templates/meven-release/copy-and-build.yml
         - template: templates/alert-failure.yml
 
