--- a/.azure-pipelines/templates/maven-release/copy-and-build.yml
+++ b/.azure-pipelines/templates/maven-release/copy-and-build.yml
@@ -3,7 +3,7 @@ steps:
   inputs:
     SourceFolder: '$(Agent.TempDirectory)'
     Contents: '**'
-    TargetFolder: '$(DROP_PATH)'
+    TargetFolder: '$(DROP_PATH)/'
 
 - task: Gradle@2
   inputs:
