--- a/.azure-pipelines/buildAndPackage.yml
+++ b/.azure-pipelines/buildAndPackage.yml
@@ -90,5 +90,7 @@ stages:
      runOnce:
       deploy:
         steps: 
-        - template: templates/github-release/version-and-release.yml
+        - template: templates/version-and-release.yml
+          parameters:
+            gitConnection: 'ramsessanchez'
         - template: templates/alert-failure.yml
