--- a/.azure-pipelines/templates/version-and-release.yml
+++ b/.azure-pipelines/templates/version-and-release.yml
@@ -11,7 +11,7 @@ steps:
 
 - task: GitHubRelease@1
   inputs:
-    gitHubConnection: 'ramsessanchez'
+    gitHubConnection: ${{ parameters.gitConnection }}
     repositoryName: '$(Build.Repository.Name)'
     action: 'create'
     target: '$(Build.SourceVersion)'
