--- a/.azure-pipelines/buildAndPackage.yml
+++ b/.azure-pipelines/buildAndPackage.yml
@@ -91,4 +91,4 @@ stages:
         steps: 
         - template: templates/version-and-release.yml
           parameters:
-            gitConnection: 'microsoftgraph'
+            gitConnection: 'microsoftgraphrelease'
