--- a/.azure-pipelines/buildAndPackage.yml
+++ b/.azure-pipelines/buildAndPackage.yml
@@ -46,7 +46,7 @@ stages:
     - template: templates/build/publish-artefacts.yml
 
 - stage: Maven_Preview
-  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/dev'))
+  # condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/dev'))
   jobs: 
   - deployment: Maven_Preview
     environment: 'MSGraph SDK Development - Java'
@@ -56,7 +56,8 @@ stages:
      runOnce:
       deploy:
         steps:
-        - template: templates/install-java.yml 
+        - template: templates/download-artifacts.yml
+        - template: templates/install-java.yml
         - template: templates/secure-files.yml
         - template: templates/copy-and-build.yml
           parameters:
@@ -74,6 +75,7 @@ stages:
      runOnce:
       deploy:
         steps:
+        - template: templates/download-artifacts.yml
         - template: templates/install-java.yml
         - template: templates/secure-files.yml
           parameters:
@@ -91,7 +93,7 @@ stages:
      runOnce:
       deploy:
         steps: 
-        - template: templates/install-java.yml
+        - template: templates/download-artifacts.yml
         - template: templates/version-and-release.yml
           parameters:
             gitConnection: 'microsoftgraphrelease'
