- another path fix attemp

--- a/.azure-pipelines/templates/download-artifacts.yml
+++ b/.azure-pipelines/templates/download-artifacts.yml
@@ -1,3 +1,6 @@
 steps:
-  - download: current
-    artifact: Drop
+  - task: DownloadPipelineArtifact@2
+    inputs:
+      source: current
+      artifact: Drop
+      path: '$(Agent.BuildDirectory)/Drop/'
